What's New for OpenJPIP

* : fixed
- : removed
! : changed
+ : added

November 30, 2011
+ [kaori] TCP return (http-tcp) implemented

November 16, 2011
* [kaori] fixed Region of Interest option, and memory leak of opj_dec_server
+ [kaori] new feature to target JP2 files from www (libcurl required)
* [kaori] fixed opj_server execusion error (instant terminating) with autotool, cmake still need to be fixed

November 8, 2011
! [kaori] updated main page of doxygen

November 3, 2011
* [kaori] solved memory leak of opj_server
! [kaori] removed redundant defines

November 2, 2011
* [antonin] additional patches for autotools and cmake

October 26, 2011
* [kaori] additional patches for autotool are applied

October 25, 2011
* [kaori] patches for cmake and autotool are applied
* [kaori] fixed client viewer to be compatible with server response header both Content-type and Content-Type

October 20, 2011
+ [added] API style in openJPIP library
! [kaori] rearranged directories, applications are all under util/ directory, currently only 'make -f Makefile.nix' works

October 18, 2011
! [kaori] rearranged opj_server, opj_dec_server directory

October 14, 2011
+ [kaori] enable all progression orders

October 12, 2011
+ [kaori] enable layers requests; restricting the number of codesream quality layers

October 11, 2011
+ [antonin] enable JPT-stream request from client viewer option (credit to kaori)

October 10, 2011
- [antonin] removed obsolete indexer utility (credit to kaori)
+ [antonin] enabled JPP-stream (credit to kaori)

September 16, 2011
+ [kaori] enabled stateless requests from the opj_viewers

Septempber 1, 2011
* [kaori] changed terminating status of opj_server in debug/non-server mode

August 27, 2011
* [antonin] fixed missing include directory in opj_client/opj_dec_server/CMakeLists.txt

August 26, 2011
* [antonin] fixed cmake and autotools files to reflect recent indexer changes in JPIP
! [kaori] indexer using the latest openjpeg library